tests/baselines/reference/generatorTypeCheck25.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck25.ts(4,5): error TS2322: Type '() => IterableIterator<Bar | Baz, any, any>' is not assignable to type '() => Iterable<Foo, any, any>'.
  Type 'IterableIterator<Bar | Baz, any, any>' is not assignable to type 'Iterable<Foo, any, any>'.
    Types of property '[Symbol.iterator]' are incompatible.
      Type '() => IterableIterator<Bar | Baz, any, any>' is not assignable to type '() => Iterator<Foo, any, any>'.
        Type 'IterableIterator<Bar | Baz, any, any>' is not assignable to type 'Iterator<Foo, any, any>'.
          Types of property 'next' are incompatible.
            Type '(value?: any) => IteratorResult<Bar | Baz, any>' is not assignable to type '(value?: any) => IteratorResult<Foo, any>'.
              Type 'IteratorResult<Bar | Baz, any>' is not assignable to type 'IteratorResult<Foo, any>'.
                Type '{ done: false; value: Bar | Baz; }' is not assignable to type 'IteratorResult<Foo, any>'.
                  Type '{ done: false; value: Bar | Baz; }' is not assignable to type '{ done: false; value: Foo; }'.
                    Types of property 'value' are incompatible.
                      Type 'Bar | Baz' is not assignable to type 'Foo'.
                        Type 'Baz' is not assignable to type 'Foo'.
                          Property 'x' is missing in type 'Baz'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck25.ts (1 errors) ====
    class Foo { x: number }
    class Bar extends Foo { y: string }
    class Baz { z: number }
    var g3: () => Iterable<Foo> = function* () {
        ~~
!!! error TS2322: Type '() => IterableIterator<Bar | Baz, any, any>' is not assignable to type '() => Iterable<Foo, any, any>'.
!!! error TS2322:   Type 'IterableIterator<Bar | Baz, any, any>' is not assignable to type 'Iterable<Foo, any, any>'.
!!! error TS2322:     Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:       Type '() => IterableIterator<Bar | Baz, any, any>' is not assignable to type '() => Iterator<Foo, any, any>'.
!!! error TS2322:         Type 'IterableIterator<Bar | Baz, any, any>' is not assignable to type 'Iterator<Foo, any, any>'.
!!! error TS2322:           Types of property 'next' are incompatible.
!!! error TS2322:             Type '(value?: any) => IteratorResult<Bar | Baz, any>' is not assignable to type '(value?: any) => IteratorResult<Foo, any>'.
!!! error TS2322:               Type 'IteratorResult<Bar | Baz, any>' is not assignable to type 'IteratorResult<Foo, any>'.
!!! error TS2322:                 Type '{ done: false; value: Bar | Baz; }' is not assignable to type 'IteratorResult<Foo, any>'.
!!! error TS2322:                   Type '{ done: false; value: Bar | Baz; }' is not assignable to type '{ done: false; value: Foo; }'.
!!! error TS2322:                     Types of property 'value' are incompatible.
!!! error TS2322:                       Type 'Bar | Baz' is not assignable to type 'Foo'.
!!! error TS2322:                         Type 'Baz' is not assignable to type 'Foo'.
!!! error TS2322:                           Property 'x' is missing in type 'Baz'.
        yield;
        yield new Bar;
        yield new Baz;
        yield *[new Bar];
        yield *[new Baz];
    }